[gd_scene load_steps=3 format=3 uid="uid://ipnlocud1onv"]

[ext_resource type="Script" uid="uid://bab03rpjb8073" path="res://Script/npc.gd" id="1_eq1n1"]
[ext_resource type="Script" uid="uid://rsmrex1t1um1" path="res://Script/dialogue_area.gd" id="2_xxsvc"]

[node name="Npc" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_eq1n1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="DialogueArea" type="Area2D" parent="."]
process_priority = 1
script = ExtResource("2_xxsvc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]

[connection signal="body_entered" from="DialogueArea" to="." method="_on_dialogue_area_body_entered"]
[connection signal="body_exited" from="DialogueArea" to="." method="_on_dialogue_area_body_exited"]
